# RemoteControlHumanoidRobot

Server/: CMakeLists.txt  Server.cpp
Server/controllers/: CMakeLists.txt  clientSocket.cpp  clientSocket.h  controllerInfo.cpp  controllerInfo.h  dbman.cpp  dbman.h  mcuSocket.cpp  mcuSocket.h  queryGenerator.cpp  queryGenerator.h  robotInformation.cpp  robotInformation.h  serverLogic.cpp  serverLogic.h  srvCore.cpp  srvCore.h
Server/test/: CMakeLists.txt  test_queryGenerator.cpp
TestClient/: CMakeLists.txt  CliSock.cpp  CliSock.h  Client.cpp  Client.h  main.cpp
TestMCU/: CMakeLists.txt  CliSock.cpp  CliSock.h  Makefile  main.cpp
codeMCU/robotControl_ESP32/: robotControl.ino  secrets.h  servoCalibration.h
codeMCU/robotControl_Firebase/: robotControl.ino  servoCalibration.h
codeMCU/robotControl_Firebase/usingJSON/: robotControl.ino
codeMCU/robotControl_Server/: robotControl.ino  secrets.h  servoCalibration.h
proxyserver/: pom.xml
proxyserver/src/main/java/app/: Main.java
proxyserver/src/main/java/controllers/: ClientHandler.java  FirebaseController.java
proxyserver/testcli/: CMakeLists.txt  CliSock.cpp  main.cpp
